--- a/login.html
+++ b/login.html
@@ -82,7 +82,7 @@
                     <button class="btn" id="btnLogin" type="submit">ログイン</button>
                 </li>
                 <li>
-                    <button class="btn" id="btnTest">Test</button>
+                    <button class="btn" id="btnTest" type="button">Test</button>
                 </li>
                 <li>
                     <a href="./forgot_pwd.html" class="info">パスワードを忘れた場合</a>
