--- a/login.html
+++ b/login.html
@@ -45,11 +45,11 @@
 
         $(function () {
             // 画面自動遷移
-            let lastRequestUrl = getLocalStorage(keyLastRequestUrl);
-            if (lastRequestUrl && lastRequestUrl !== '') {
-                location.href = lastRequestUrl;
-                return;
-            }
+            // let lastRequestUrl = getLocalStorage(keyLastRequestUrl);
+            // if (lastRequestUrl && lastRequestUrl !== '') {
+            //     location.href = lastRequestUrl;
+            //     return;
+            // }
 
             // login 処理
             $('#btnLogin').click(function () {
