--- a/login.html
+++ b/login.html
@@ -31,11 +31,11 @@
 
         $(function () {
             // 画面自動遷移
-            // let lastRequestUrl = getLocalStorage(keyLastRequestUrl);
-            // if (lastRequestUrl && lastRequestUrl !== '') {
-            //     location.href = lastRequestUrl;
-            //     return;
-            // }
+            let lastRequestUrl = getLastRequestURL();
+            if (lastRequestUrl && lastRequestUrl !== '') {
+                location.href = lastRequestUrl;
+                return;
+            }
 
             // login 処理
             $('#btnLogin').click(function () {
