--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
     <link rel="manifest" href="./manifest.json" />
     <link rel="apple-touch-icon" sizes="192x192" href="https://davidleetre.github.io/WebApp/static/favicons/icon-192x192.png" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="./js/main.js"></script>
+    <script src="./js/main.js?ver=2.4"></script>
     <script>
         // SW登録
         const swPath = './service-worker.js';
