catch error page added

--- a/workdetail.html
+++ b/workdetail.html
@@ -43,7 +43,7 @@
 <body>
     <div class="header">
         <div class="title">
-            <span class="nav"><a href="javascript:void(0)">&lt;</a></span>
+            <span class="nav"><a href="javascript:void(0)" onclick="javascript:history.back()">&lt;</a></span>
             作業詳細
         </div>
     </div>
