--- a/album.html
+++ b/album.html
@@ -15,8 +15,7 @@
     <script src="./js/main.js?ver=3.0"></script>
     <script src="./js/photo_api.js?ver=3.0"></script>
     <style>
-        #ul-menu,
-        #ul-album {
+        #ul-menu, #ul-album {
             margin-bottom: 8px;
         }
 
