--- a/workdetail.html
+++ b/workdetail.html
@@ -11,7 +11,7 @@
     <meta name="viewport"
         content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
     <link rel="stylesheet" href="./style/main.css" />
-    <script src="./js/main.js?ver=3.0"></script>
+    <script src="./js/main.js?ver=3.1"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="./js/audio_api.js"></script>
     <style>
@@ -35,8 +35,6 @@
                 }).mouseout(function(){
                     $(this).css({"animation-play-state": normalStatus});
                 });
-            
-            $('#btnWorkAlbum').click(() => location.href = './album.html');
         })
     
     </script>
@@ -70,7 +68,7 @@
             </li>
             <li>
                 <button class="buttonBig left blue">TBM-RKY</button>
-                <button class="buttonBig right orange" id="btnWorkAlbum">作業アルバム</button>
+                <a class="buttonBig right orange" id="btnWorkAlbum" href="./album.html">作業アルバム</a>
             </li>
             <li>
                 <button class="buttonBig left blue">安全確認書</button>
@@ -78,7 +76,7 @@
             </li>
             <li>
                 <button class="buttonBig left blue">パロトール実施記録</button>
-                <button class="buttonBig right lightorange">録音</button>
+                <a class="buttonBig right lightorange" href="./recordlist.html">録音</a>
             </li>
             <li>
                 <button class="buttonBig left cyan">ノート</button>
